--- a/app/assets/javascripts/discourse/app/templates/modal/keyboard-shortcuts-help.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/keyboard-shortcuts-help.hbs
@@ -40,7 +40,7 @@
         <li>{{html-safe shortcuts.application.show_incoming_updated_topics}}</li>
         <li>{{html-safe shortcuts.application.search}}</li>
         <li>{{html-safe shortcuts.application.help}}</li>
-        <li>{{html-safe shortcuts.application.dismiss_new_posts}}</li>
+        <li>{{html-safe shortcuts.application.dismiss_new}}</li>
         <li>{{html-safe shortcuts.application.dismiss_topics}}</li>
         <li>{{html-safe shortcuts.application.log_out}}</li>
       </ul>
