--- a/app/assets/javascripts/discourse/app/templates/modal/group-add-members.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/group-add-members.hbs
@@ -1,47 +1,26 @@
-{{#d-modal-body rawTitle=title}}
+{{#d-modal-body rawTitle=rawTitle}}
   <form class="form-vertical group-add-members">
-    <div class="control-group">
-      <label class="control-label">
-        {{#if currentUser.can_invite_to_forum}}
-          {{i18n "groups.add_members.usernames_or_emails.title"}}
-        {{else}}
-          {{i18n "groups.add_members.usernames.title"}}
-        {{/if}}
-      </label>
-      <p class="description">
-        {{i18n "groups.add_members.description"}}
-      </p>
+    <p>{{i18n "groups.add_members.description"}}</p>
 
+    <div class="input-group">
       {{email-group-user-chooser
-        class="input-xxlarge"
-        value=usernamesAndEmails
-        id="group-add-members-user-selector"
-        onChange=(action (mut usernamesAndEmails))
-        options=(hash
-          allowEmails=currentUser.can_invite_to_forum
-          filterPlaceholder=(if currentUser.can_invite_to_forum "groups.add_members.usernames_or_emails.input_placeholder" "groups.add_members.usernames.input_placeholder")
-        )
+        value=usernames
+        onChange=(action (mut usernames))
       }}
     </div>
 
     {{#if model.can_admin_group}}
-      <div class="control-group group-add-members-make-owner">
+      <div class="input-group">
         <label>
-          {{input type="checkbox"
-              class="inline"
-              checked=setAsOwner
-              disabled=emailsPresent}}
-          {{i18n "admin.groups.add_members.as_owner"}}
+          {{input id="set-owner" type="checkbox" checked=setOwner disabled=emailsPresent}}
+          {{i18n "groups.add_members.set_owner"}}
         </label>
       </div>
     {{/if}}
 
-    <div class="control-group group-add-members-notify-users">
+    <div class="input-group">
       <label>
-        {{input type="checkbox"
-            class="inline"
-            checked=notifyUsers
-            disabled=notifyUsersDisabled}}
+        {{input type="checkbox"  checked=notifyUsers}}
         {{i18n "groups.add_members.notify_users"}}
       </label>
     </div>
@@ -52,6 +31,6 @@
   {{d-button action=(action "addMembers")
       class="add btn-primary"
       icon="plus"
-      disabled=disableAddButton
+      disabled=(or loading (not usernames))
       label="groups.add"}}
 </div>
