--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -911,6 +911,29 @@ blockquote > *:last-child {
       order: 8;
     }
   }
+
+  &.topic-post-visited {
+    border-top: none;
+
+    + .small-action {
+      border-top: none;
+    }
+
+    .topic-post-visited-line {
+      text-align: center;
+      border-bottom: 1px solid var(--danger-medium);
+      line-height: 0.1em;
+      margin: 1rem 0px;
+      width: 100%;
+
+      .topic-post-visited-message {
+        background-color: var(--secondary);
+        color: var(--danger-medium);
+        font-size: $font-down-1;
+        padding: 0 8px;
+      }
+    }
+  }
 }
 
 .whisper {
@@ -1027,25 +1050,6 @@ a.mention-group {
 
   img {
     margin: 0 0.25em;
-  }
-}
-
-.topic-post-visited-line {
-  border-bottom: 1px solid var(--danger-medium);
-  line-height: 0.1em;
-  text-align: center;
-  margin: 1rem 0px;
-
-  .topic-post-visited-message {
-    position: relative; // Chrome needs this, otherwise the line is above the text
-    background-color: var(--secondary);
-    color: var(--danger-medium);
-    font-size: $font-down-1;
-    padding: 0 8px;
-  }
-
-  + .small-action {
-    border-top: none;
   }
 }
 
