--- a/app/assets/javascripts/discourse/app/templates/components/share-source.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/share-source.hbs
@@ -1,1 +1,7 @@
-{{d-button action=(action "share" source) class=(concat "share-" source.id) translatedTitle=source.title translatedAriaLabel=source.title icon=(if source.icon source.icon source.htmlIcon)}}
+{{d-button
+  action=(action "share" source)
+  class=(concat "btn-default share-" source.id)
+  translatedTitle=source.title
+  translatedAriaLabel=source.title
+  icon=(if source.icon source.icon source.htmlIcon)
+ }}
