--- a/app/assets/stylesheets/common/base/personal-message.scss
+++ b/app/assets/stylesheets/common/base/personal-message.scss
@@ -23,14 +23,18 @@
   }
 
   .current-user-post {
+    &:not(.moderator) {
+      .topic-body .cooked {
+        background: var(--tertiary-very-low);
+      }
+      .topic-body.highlighted {
+        .cooked {
+          animation: current-user-background-fade-highlight 2.5s ease-out;
+        }
+      }
+    }
     .topic-body .cooked {
       border: 1px solid transparent;
-      background: var(--tertiary-very-low);
-    }
-    .topic-body.highlighted {
-      .cooked {
-        animation: current-user-background-fade-highlight 2.5s ease-out;
-      }
     }
     .embedded-posts {
       .topic-body .cooked {
