--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -62,7 +62,7 @@
           <link itemprop="mainEntityOfPage" href="<%= post.topic.url %>">
 
           <% if post.image_url %>
-            <link itemprop="image" href="<%= Discourse.base_url %><%= post.image_url %>">
+            <link itemprop="image" href="<%= post.image_url %>">
           <% end %>
 
           <span class="crawler-post-infos">
