--- a/app/assets/javascripts/discourse/app/templates/user/activity.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user/activity.hbs
@@ -13,7 +13,7 @@
 
       {{#if user.showDrafts}}
         {{#d-navigation-item route="userActivity.drafts"}}
-          {{i18n "user_action_groups.15"}}
+          {{draftLabel}}
         {{/d-navigation-item}}
       {{/if}}
 
