--- a/app/assets/javascripts/admin/addon/templates/user-index.hbs
+++ b/app/assets/javascripts/admin/addon/templates/user-index.hbs
@@ -641,6 +641,20 @@
     <div class="field">{{i18n "user.invited.days_visited"}}</div>
     <div class="value">{{html-safe model.days_visited}}</div>
   </div>
+  <div class="display-row post-edits-count">
+    <div class="field">{{i18n "admin.user.post_edits_count" }}</div>
+    <div class="value">
+      {{if (gt model.post_edits_count 0) model.post_edits_count "0"}}
+    </div>
+    <div class="controls">
+      {{#if (gt model.post_edits_count 0) }}
+        {{#link-to "adminReports.show" "post_edits" (query-params filters=postEditsByEditorFilter) class="btn btn-icon"}}
+          {{d-icon "far-eye"}}
+          {{i18n "admin.user.view_edits"}}
+        {{/link-to}}
+      {{/if}}
+    </div>
+  </div>
 </section>
 
 {{#if model.single_sign_on_record}}
