--- a/app/assets/stylesheets/common/components/buttons.scss
+++ b/app/assets/stylesheets/common/components/buttons.scss
@@ -178,6 +178,10 @@
     margin-right: 9px;
     font-size: $font-0;
   }
+  .d-icon,
+  &.btn:hover .d-icon {
+    color: #000;
+  }
   &.google_oauth2 {
     background: var(--google);
     color: #333;
