--- a/app/assets/javascripts/discourse/app/templates/modal/flag.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/flag.hbs
@@ -44,6 +44,7 @@
     {{d-button
       class="btn-danger"
       action=(action "flagForReview")
+      disabled=cantFlagForReview
       icon="exclamation-triangle"
       label="flagging.flag_for_review"
     }}
