--- a/app/assets/javascripts/discourse/app/templates/components/group-flair-inputs.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/group-flair-inputs.hbs
@@ -61,12 +61,13 @@
       <img width="45" height="45" src={{demoAvatarUrl}} class="avatar actor" alt="" role="presentation">
     </div>
 
-    {{#if flairPreviewImage}}
-      <div class="avatar-flair demo {{flairPreviewClasses}}" style={{flairPreviewStyle}}></div>
-    {{else if flairPreviewIcon}}
-      <div class="avatar-flair demo {{flairPreviewClasses}}" style={{flairPreviewStyle}} role="presentation">
-        {{d-icon flairPreviewIconUrl}}
-      </div>
+    {{#if (or model.flair_icon flairImageUrl model.flairBackgroundHexColor)}}
+      {{avatar-flair
+        flairName=model.name
+        flairUrl=(if flairPreviewIcon model.flair_icon (if flairPreviewImage flairImageUrl ""))
+        flairBgColor=model.flairBackgroundHexColor
+        flairColor=model.flairHexColor
+      }}
     {{/if}}
   </div>
 </div>
