--- a/app/assets/javascripts/discourse/app/templates/group.hbs
+++ b/app/assets/javascripts/discourse/app/templates/group.hbs
@@ -9,16 +9,16 @@
 
   <div class="group-details-container">
     <div class="group-info">
-      {{#if model.flair_url}}
-        <div class="group-avatar-flair">
+      <div class="group-avatar-flair">
+        {{#if (or model.flair_icon model.flair_url model.flair_bg_color)}}
           {{avatar-flair
             flairName=model.name
-            flairUrl=model.flair_url
+            flairUrl=(or model.flair_icon model.flair_url)
             flairBgColor=model.flair_bg_color
             flairColor=model.flair_color
           }}
-        </div>
-      {{/if}}
+        {{/if}}
+      </div>
 
       <div class="group-info-names">
         <span class="group-info-name">{{groupName}}</span>
