--- a/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
@@ -20,6 +20,13 @@
   disabled=disableTextarea
   outletArgs=(hash composer=composer editorType="composer")}}
 
+{{#if experimentalComposerUploads}}
+  <br>
+  <div class="alert alert-warning">
+    Experimental uploader being used!
+  </div>
+{{/if}}
+
 {{#if allowUpload}}
   {{#if acceptsAllFormats}}
     <input type="file" id="file-uploader" multiple>
