--- a/app/assets/javascripts/discourse/app/templates/composer.hbs
+++ b/app/assets/javascripts/discourse/app/templates/composer.hbs
@@ -108,7 +108,8 @@
 
         </div>
 
-        {{composer-editor topic=topic
+        {{component composerComponent
+                          topic=topic
                           composer=model
                           lastValidatedAt=lastValidatedAt
                           canWhisper=canWhisper
